# PSEUDO

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docs.yml
docs/: Gemfile  _config.yml  api.md  index.md  reference.md
docs/_includes/: head_custom.html  nav_footer_custom.html
docs/_sass/custom/: custom.scss
docs/guides/: analyse.md  debias.md  index.md  quantify.md
docs/stylesheets/: minimal.css
docs/theme/: main.html
docs/theme/stylesheets/: styles.css
edia_/: muse.ipynb  muse_visualization.ipynb
edia_/.claude/: launch.json  settings.local.json
edia_/docs/: MUSE.md
edia_/muse/: __init__.py  aggregation.py  config.py  diagnostics.py  grid_utils.py  io.py  ownership.py  pipeline.py  radii.py  scoring.py  visualization.py  weighting.py
paper data/: edenn_paper (1).tex  edenn_paper.tex
src/: main.py
src/analyse/: api.py  cli.py  screen_report.py  visualization.py
src/analyse/muse/: __init__.py  aggregation.py  config.py  diagnostics.py  grid_utils.py  io.py  ownership.py  pipeline.py  radii.py  scoring.py  weighting.py
src/analyse/water_sites/: alignment.py  clustering.py  config.py  io.py  metrics.py  occupancy.py  pipeline.py  site_snr.py  visualisation.py
src/common/: logging.py  slurm.py
src/conf/: config.yaml
src/debias/: DEBIASGUIDE.MD  api.py  cli.py  config.py  omission_sampler.py  omission_table.py  parameter_generator.py  phenix_param_parser.py
src/debias/phenix_templates/: maps_template.params  pdbtools_template.params  ready_set_template.params
src/quantify/: QUANTIFYGUIDE.MD  aggregator.py  api.py  cli.py  ownership_logic.py  resources.py  statistical_model.py  utils.py
tests/test_analyse/: test_aggregation.py  test_api.py  test_pipeline_exports.py
tests/test_data/: test_reflections.mtz
tests/test_debias/: test_api.py  test_integration.py  test_param_parser.py  test_sampler.py
tests/test_quantify/: test_api.py  test_statistical_model.py  test_utils.py
theme/: main.html
theme/javascripts/: copy_button.js
validation/: experiment_1_hyperparams.ipynb  utils.py  validation_phases_cc.ipynb  validation_phases_mse.ipynb
