[build-system]

requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]

name = "PSEUDO"
version = "0.1.0"
description = "PSEUDO is a computational framework for debiasing and uncertainty quantification in protein structural models solved by molecular replacement."
authors = [
  {name = "Hamlet Khachatryan", email = "hamlet.khachatryan@ndm.ox.ac.uk"},
  {name = "Conor Wild", email = "c.wild@diamond.ac.uk"},
  {name = "Frank von Delft", email = "frank.vondelft@cmd.ox.ac.uk"}
]
maintainers = [
  {name = "Hamlet Khachatryan", email = "hamlet.khachatryan@ndm.ox.ac.uk"},
  {name = "Conor Wild", email = "c.wild@diamond.ac.uk"},
]
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9"
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.optional-dependencies]
dev = [
    "pytest",
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
]
cli = [
    "click"
]

[project.scripts]
run-debias = "debias.cli:debias_cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]

debias = ["phenix_templates/*.params"]
conf = [ "*.json",  "*.yaml"]
tests = ["test_data/*.pdb", "test_data/*.mtz"]

[tool.ruff]

line-length = 88
indent-width = 4
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.lint]

select = [
    "E",      # pycodestyle errors
    "F",      # Pyflakes
    "N",      # pep8-naming
]
ignore = [
    "E501",
    "B008",
]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]

quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
